vuln-fix: Fetch only allowlisted URL in SSRF lesson (STO-TYWLtNpicU4hpxVyysbHqy)
The lesson opened a server-side connection to a URL taken from the request, which could be pointed at link-local, metadata or internal addresses. The request value is now only matched against a server-side allowlist and the stream is opened on the constant destination, so user input cannot steer the fetch. The solving input and the failure response are unchanged, and a regression test asserts a metadata-service URL does not complete the lesson.

Weakness: 918
Severity: High
Detection: Tool
Signed-off-by: Harness Auto-Remediation <remediation@harness.io>
Co-authored-by: Harness Auto-Remediation <remediation@harness.io>